# SubVision

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  docker-compose.yml  main.py  nginx.conf  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  start_app.bat  supervisord.conf
.github/workflows/: ci.yml
backend/: main.py  pyproject.toml  requirements-worker.txt  requirements.txt  worker.py
backend/api/: dependencies.py  schemas.py
backend/app/: main.py  schemas.py  websocket_manager.py
backend/core/: blur_effects.py  cleanup.py  config.py  constants.py  exceptions.py  filters.py  geometry.py  gpu_utils.py  image_ops.py  image_pipeline.py  llm_engine.py  motion.py  ocr_engine.py  presets.py  srt_parser.py  storage.py  subtitle_aggregator.py  utils.py  video_io.py  video_provider.py  worker.py
backend/media/: blur_manager.py  mask_generator.py  transcoder.py
backend/ocr/: aggregator.py  engine.py  process_manager.py  worker.py
backend/processing/: aggregator.py  filters.py  interfaces.py  ocr_engine.py  pipeline.py  presets.py  subtitle_parser.py  text_utils.py  video_reader.py
backend/rendering/: blur_preview.py  geometry.py  interfaces.py  models.py  pipeline.py  transcoder.py  (+1 more)
core/: image_ops.py  image_pipeline.py  llm_engine.py  ocr_engine.py  presets.py  subtitle_aggregator.py  ui_utils.py  utils.py  video_provider.py  worker.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
services/: process_manager.py  video_manager.py
ui/: callbacks.py  layout.py
(+84 files in other folders)
