[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "subvision"
version = "0.1.0"
description = "AI-Powered Video OCR & Subtitle Extractor"
requires-python = ">=3.10"
dependencies = [
    "opencv-python-headless",
    "numpy",
    "Pillow",
    "paddlepaddle-gpu",
    "paddleocr>=2.9.1",
    "llama-cpp-python",
    "gradio",
    "huggingface_hub"
]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["core", "services", "ui"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "paddle.*",
    "paddleocr.*",
    "gradio.*",
    "llama_cpp.*",
    "huggingface_hub.*"
]
ignore_missing_imports = true
